config/objects/Quote_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Accounts</relationshipLabel>
        <relationshipName>Quote_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Quote Account</label>
    <nameField>
        <label>Quote Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>